--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
                                 <button type="button" class="search-trigger"><i class="pe-7s-search"></i></button>
                             </div>
                             <div class="header__btn d-none d-xl-block">
-                                <a th:href="@{/man}" class="v-btn">登录<i class="fal fa-arrow-alt-right"></i></a>
+                                <a id="loginBtn" href="" class="v-btn">登录<i class="fal fa-arrow-alt-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -900,6 +900,7 @@
 
 <!-- JS here -->
 <script src="assets/js/vendor/jquery-3.6.0.min.js"></script>
+<script src="assets/js/searchWB.js"></script>
 <script src="assets/js/test.js"></script>
 <script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/owl.carousel.min.js"></script>
