修改了主页、关于页面

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -110,8 +110,13 @@
                 <div class="offset-widget mb-40 d-none d-lg-block">
                     <div class="info-widget">
                         <h4 class="offset-title mb-20 d-none">关于我们</h4>
-                        <p class="mb-30">上海大众物流有限公司系大众交通（集团）全资子公司，是上海城市配送行业骨干企业、上海市搬场行业
-                            五星级企业、上海市交通港口行业AAA级诚信企业、国家经贸委确定的全国34家重点推荐企业和交通部确定的全国18家快运试点企业。 </p>
+                        <p class="mb-30">北京中凯国际物流有限公司，是由北京首都科技集团进出口部、北京利凯国际货运有限公司和北京联合诚信科贸
+                            有限公司三方投资组建而成。我公司具有进出口代理经营权，国际货运一级代理
+                            资格，代理报关和代理报检权，拥有物流监管车队和中转仓库。我公司并被国税
+                            局认定为增值税一般纳税人资格，可从事商贸经营和出口退税。所以我公司集成
+                            了专业外（商）贸公司和专业国际货运代理公司的优势，使得国际物流的综合业
+                            务都可以在我公司得以完整实现；同时业务的综合性可以使得我们的客户得到全
+                            方位的精准服务。目前我公司代理直客进出口货物年度总额达2000万美金以上。</p>
                         <a href="#" class="c-btn btn-round-02 d-none">联系我们</a>
                     </div>
                 </div>
@@ -166,15 +171,15 @@
                         <h4>相关信息</h4>
                         <a href="#" class="">
                             <i class="fal fa-map-marker-alt"></i>
-                            <span>广东省广州市玉沙路金城国际大厦</span>
+                            <span>北京市顺义区顺平路580号航城广场B座602室</span>
                         </a>
-                        <a href="tel:088889797697" class="">
+                        <a href="tel:01064329142" class="">
                             <i class="fal fa-phone"></i>
-                            <span>0898-66889888</span>
+                            <span>010-64329142</span>
                         </a>
                         <a href="/cdn-cgi/l/email-protection#1b7a7f7672755b7f74767a727535787476" class="">
                             <i class="far fa-envelope"></i>
-                            <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">[12344521@163.com]</span></span>
+                            <span><span class="__cf_email__" data-cfemail="2746434a4e496743484a464e490944484a">finance002@linking.net.cn</span></span>
                         </a>
 
                     </div>
@@ -224,15 +229,11 @@
                     <div class="col-lg-6">
                         <div class="about__img mb-30 ml-70 f-left p-relative">
                             <img id="about4" src="../../../../files/image/about/about4.jpg" alt="logistics and transport image">
-                            <div class="founder tr">
-                                <img if="about5" src="assets/img/about/about5.jpg" alt="">
-                                <h6><a href="#">詹杜·威利姆</a></h6>
-                                <span>创始人</span>
-                            </div>
+
                             <div class="delivered bl d-none d-md-block">
                                 <i class="flaticon-growth"></i>
-                                <span>9.6m</span>
-                                <p>货物交付量高达</p>
+                                <span>$20M+</span>
+                                <p>代理货物年度总额</p>
                             </div>
                         </div>
                     </div>
@@ -240,13 +241,20 @@
                         <div class="about__content mb-30 pl-45 p-relative pp">
                             <div class="section-title">
                                 <span class="category">关于我们</span>
-                                <h2>可靠的物流和运输解决方案</h2>
+                                <h2>可靠的物流解决方案</h2>
                             </div>
-                            <p>上海大众物流有限公司系大众交通（集团）全资子公司，是上海城市配送行业骨干企业、上海市搬场行业“五星级”企业、
-                                上海市交通港口行业AAA级诚信企业、国家经贸委确定的全国34家重点推荐企业和交通部确定的全国18家快运试点企业。 </p>
-                            <p>上海大众物流有限公司成立于1999年，公司车辆资源实力雄厚，拥有各类吨位的厢式货运车辆900余辆，公司的货运出
-                                租汽车服务和市内搬场服务这两大品牌在上海
-                                已经家喻户晓，“要货的找大众”、“要搬运找大众” 已成为上海市民的首选，公司还拥有一支城市配送的专业管理团队和专业操作人员。</p>
+                            <p> 我公司业务部主要分为进出口部、国际货运部、贸易部、口岸操作
+                                部。各部门主要业务骨干人员多为本科学历，最高至硕士学历，且多
+                                年从事进出口相关业务，可以对贵企业从国际采购及预算、免表手册
+                                办理、外汇结算核销、国际空海运输、进出口报关报检、出口退税到
+                                国内商贸采购及物流仓储配送等各环节提供更好的服务，以帮助用户
+                                提高物流效率，降低企业成本。我公司在国内外建有自己的网络体
+                                系，以北京为核心业务辐射世界各地。国内已经在天津、青岛、大
+                                连、上海、广州、深圳等各主要港口城市设有自己的办事处；国外在
+                                欧洲，美洲，澳洲，东南亚，中东等地都拥有自己的合作代理。经过
+                                多年的发展，我公司已经与中外多家船公司、航空公司、快件公司、
+                                中铁快运、集装箱堆场、大型车队等签订了代理协议和服务合约，所
+                                以完全便利地为客户提供进出口全程的门到门物流服务。</p>
                             <div class="learn-more pt-10">
                                 <a class="s-btn circle black" href="">了解了！</a>
                             </div>
@@ -275,7 +283,7 @@
                                     <i class="icofont-airplane-alt"></i>
                                 </div>
                                 <h4>物流优势</h4>
-                                <p>顺丰电子商务产业园是顺丰集团借助已具备的强大营运能力，为满足电商企业全...</p>
+                                <p>目前我公司代理直客进出口货物年度总额达2000万美金以上。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -284,8 +292,7 @@
                                     <i class="icofont-truck-alt"></i>
                                 </div>
                                 <h4>规模优势</h4>
-                                <p>顺丰电子商务产业园是顺丰集团借助已具备的强大营运能力，为满足电商企业全...
-                                </p>
+                                <p>国内已经在天津、青岛、大连、上海、广州、深圳等各主要港口城市设有自己的办事处；国外在欧洲，美洲，澳洲，东南亚，中东等地都拥有自己的合作代理。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -294,7 +301,7 @@
                                     <i class="icofont-truck"></i>
                                 </div>
                                 <h4>政策优势</h4>
-                                <p>顺丰电子商务产业园是顺丰集团借助已具备的强大营运能力，为满足电商企业全...</p>
+                                <p>我公司具有进出口代理经营权，国际货运一级代理资格，代理报关和代理报检权，拥有物流监管车队和中转仓库。我公司并被国税局认定为增值税一般纳税人资格，可从事商贸经营和出口退税。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -303,7 +310,7 @@
                                     <i class="icofont-helicopter"></i>
                                 </div>
                                 <h4>服务优势</h4>
-                                <p>顺丰电子商务产业园是顺丰集团借助已具备的强大营运能力，为满足电商企业全...</p>
+                                <p>我公司已经与中外多家船公司、航空公司、快件公司、中铁快运、集装箱堆场、大型车队等签订了代理协议和服务合约，所以完全便利地为客户提供进出口全程的门到门物流服务。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -312,7 +319,7 @@
                                     <i class="icofont-sail-boat-alt-2"></i>
                                 </div>
                                 <h4>全球运输</h4>
-                                <p>遍布世界各地的运输点</p>
+                                <p>国内已经在天津、青岛、大连、上海、广州、深圳等各主要港口城市设有自己的办事处；国外在欧洲，美洲，澳洲，东南亚，中东等地都拥有自己的合作代理。</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-md-6">
@@ -320,8 +327,8 @@
                                 <div class="features-box-icon">
                                     <i class="icofont-scooter"></i>
                                 </div>
-                                <h4>享誉世界</h4>
-                                <p>广受赞誉</p>
+                                <h4>企业文化</h4>
+                                <p>Make logistics easy and linking everything and every where, 将人与商品、服务和行业连接起来，助力企业发展，创造行业机会，改善生产和生活。</p>
                             </div>
                         </div>
                     </div>
@@ -380,6 +387,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/test.js"></script>
 </body>
 
 </html>
