--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -450,6 +450,7 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/test.js"></script>
 </body>
 
 </html>
